--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -11,7 +11,11 @@
         <p>{{ form.text }}</p>
         <p>{{ form.submit }}</p>
         <p>{{ form.text.data }}</p>
-        <p> {{ response }} </p>        
+        <p> {{ bot_response }} </p> 
+        <p> {{ title }} </p>
+        <p> {{ intro }} </p>
+        <p><a href="{{ link }}"></a></p>
+             
     </form>
 
 </body>
