--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <style>
-       /* Set the size of the div element that contains the map */
-      #map {
-        height: 400px;  /* The height is 400 pixels */
-        width: 100%;  /* The width is the width of the web page */
-       }
-    </style>
+    <head>
+        <style>
+           /* Set the size of the div element that contains the map */
+          #map {
+            height: 150px;  /* The height is 400 pixels */
+            width: 25%;  /* The width is the width of the web page */
+           }
+        </style>
+        <title>GrandPy Bot</title>
+    </head>
+    <body>    
+        <h1>test</h1>
 
-    <title>test</title>
-</head>
-<body>
-
-    <h1>test</h1>
-    <form action="" method="POST" novalidate id="form">
-        {{ form.hidden_tag() }}
-        <p>{{ form.text }}</p>
-        <p>{{ form.submit }}</p>
-        <p>USER INPUT: {{ user_input }}</p>
-        <p>PARSED TEXT: {{ parsed_text }}</p>          
-        <p> {{ title }} </p>
-        <p>Address: {{ address }}</p>
-        <p> {{ intro }} </p>
-        <p><a href= "{{ link }}" target="_blank" >{{ link }}</a></p>
-        <p> {{ lat }} </p>
-        <p> {{ lgn }} </p>
-    </form> 
-    {% if title %}  
-    <div id="map"></div>
-    {% endif %}  
-    <script >        
-        function initMap() {          
-        // The location of address
-        var position_marqueur = {lat:{{ lat }} , lng: {{ lgn }}};
-        // The map, centered at address
-        var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 10, center: position_marqueur});
-        // The marker, positioned at address
-        var marker = new google.maps.Marker({position: position_marqueur, map: map}); 
-      };
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEIv6g--KN1RoNNBDrkLM9UQnGQrkf3_Y&callback=initMap">
-    </script>
-    
-
-</body>
+        <input type="text" id="ajaxTextbox">
+        <input type="submit" id="ajaxButton" style="cursor: pointer;" value="Envoyer">
+        <p id="address"></p>
+        <p id="title"></p>
+        <a  id="linkHref" href="" target="_blank"><p id="link"></p></a>    
+        <p id="intro"></p>
+        <p id="lat"></p>
+        <p id="lng"></p>  
+        <div id="map"></div>  
+        
+        <script type="text/javascript" src="{{url_for('static', filename='ajaxPost.js')}}"></script>
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEIv6g--KN1RoNNBDrkLM9UQnGQrkf3_Y&callback=initMap">
+        </script>    
+    </body>
 </html>
