--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -13,7 +13,7 @@
     <body>    
         <h1>test</h1>
 
-        <input type="text" id="ajaxTextbox">
+        <input type="text" id="ajaxTextbox" autocomplete="off">
         <input type="submit" id="ajaxButton" style="cursor: pointer;" value="Envoyer">
         <p id="address"></p>
         <p id="title"></p>
