--- a/app/templates/pages/test_home.html
+++ b/app/templates/pages/test_home.html
@@ -1,9 +1,43 @@
 {% extends 'layouts/base.html' %}
 
 {% block body %}
+<div class="container">
+    <!-- With Name and Arrow - LEFT -->
+    <div class="msg">
+      <div class="bubble">
+        <div class="txt">
+          <span class="name">GrandPyBot</span>
+          <span class="timestamp">10:20 pm</span>      
+          <span class="message">
+            Can you believe this amazing chat bubbles? It's all CSS
+          </span> 
+          
+        </div>
+      </div>
+    </div>  
 
-
-<div id="background">
+    <!-- With Name and Arrow - RIGHT -->
+    <div class="msg">
+      <div class="bubble alt">
+        <div class="txt">
+          <span class="name alt">Moi
+          </span>
+          <span class="timestamp">10:22 pm</span>
+          <p class="message">It's nuts, dude. Nuts</p>
+        </div>
+      </div>
+    </div>  
+</div>
+<div class="container">
+    <!-- mettre ici la textearea et le submit -->
+    <textarea data-autoresize rows="2"></textarea>
+    <!-- <textarea class="bubble" autocomplete="off" ></textarea> -->
+    <!-- <input type="submit" class="input" id="ajaxButton" style="cursor: pointer;" value="Envoyer"> -->
+</div><br><br><br><br>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
+<script type="text/javascript" src="{{url_for('static', filename='test.js')}}"></script>
+<!-- <div id="background">
     <br><br><br><br><br><br><br><br><br><br>
     <div id="chatZone" class="image"></div>
 
@@ -11,10 +45,12 @@
         <textarea id="ajaxTextbox" autocomplete="off" contentEditable></textarea>
         <input type="submit" id="ajaxButton" style="cursor: pointer;" value="Envoyer">
     </div>    
-
+    
     <script type="text/javascript" src="{{url_for('static', filename='test.js')}}"></script>             
 </div> 
-<br><br>   
+
+   --> 
+
 {% endblock %}
 
 {# TODO
@@ -23,3 +59,5 @@
     
 
  #}
+
+
