--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -11,6 +11,6 @@
         <body>
             {% block body %} {% endblock body %} 
         </body>
-    {%include "layouts/partials/footer.html"%}
+    <!-- {%include "layouts/partials/footer.html"%} -->
     
 </html>
