--- a/app/static/test_home.css
+++ b/app/static/test_home.css
@@ -119,6 +119,7 @@ body {
   color: #999;
 }
 #container {
+    bottom: 0;
     overflow: auto;
     width: 75%;
     margin: 0 auto;
@@ -148,6 +149,7 @@ textarea {
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
 
 }
+
 #ajaxButton {
     font-family: "Helvetica Neue", Helvetica;
     cursor: pointer;
@@ -163,8 +165,11 @@ textarea {
 footer {
     display: block;
 }
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 640px) {
   .container {
+    width: 100%;
+  }
+  #container {
     width: 100%;
   }
   .timestamp {
