--- a/app/templates/layouts/partials/footer.html
+++ b/app/templates/layouts/partials/footer.html
@@ -1,5 +1,3 @@
-<footer>
-    <div id="facebook">FB</div>
-    <div id="oc">OC</div>
-    <div id="linkedin">LK</div>
-</footer>
+<footer class="footer">
+    footer
+</footer> 
