--- a/app/templates/layouts/partials/header.html
+++ b/app/templates/layouts/partials/header.html
@@ -1,4 +1,3 @@
-<header>
-    <div id="header_home">Home</div>
-    <div id="header_presentation">Qui juis-je?</div>    
+<header class="header">
+    header
 </header>
