--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -5,28 +5,27 @@
 <aside class="aside-left" ></aside>
 
 <main class="main">
+    {# zone of the bubbles chat #}
     <div class="response">
-        <div class="zone">
-            <div class="bubble bot">Lorem ipsum dolor sit ametdeserunt mollit anim id est laborum.</div>
+        <div class="zone first">
+            <div class="bubble bot">Salut mon p'tit ! <br>
+            </div>
         </div>
-         <div class="zone">
-            <div class="bubble user">Lorem ipsum dolor sit amet, lore eu aborum..</div>
-        </div> 
-        <div class="zone">
-            <div class="bubble user">Lorem ips Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</div>
-        </div>         
-             
-        <div class="zone">
-            <div class="bubble user">Lorem ipsum dolor sit amet, consedatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</div>
-        </div> 
-
+        <div class="zone first">
+            <div class="bubble bot">
+             Je suis GrandPy le papy robot !<br>
+            </div>
+        </div>
+        <div class="zone first">
+            <div class="bubble bot">Donne moi un lieu à trouver et je te donnerai son adresse sur une carte, et en prime tu aurras droit à une anecdote !<br><br> Car oui à 124 ans j'en ai des choses à dire, et tu as bien une seconde à m'accorder ahah !<br><br> Cuf Cuf Cuf... Excuse moi c'est encore ma vieille toux ! </div>
+        </div>
     </div>
+    {# user input textarea and submit button #}
     <div class="input">
         <textarea id="ajaxTextbox" onkeyup="textAreaAdjust(this)" placeholder="Demander à GrandPy !"></textarea>
         <input id="ajaxButton" type="submit" value="Envoyer" style="cursor: pointer;">
     </div>
+
 </main>
 
 <aside class="aside-right"></aside>
