--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css') }}">
     </head>    
