--- a/app/static/home.css
+++ b/app/static/home.css
@@ -22,7 +22,7 @@ main {
     grid-row: 2 ;
     display: grid;
     grid-template-columns: 9fr 1fr;
-    grid-template-rows: 9fr 1fr;
+    grid-template-rows: 8fr 2fr;
     grid-gap: 5px;
 }
 
@@ -32,9 +32,10 @@ main {
     background-color: #ECE5DD;  
     max-height: 1fr;
     overflow: auto;
+
 }
 .zone {
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     height: auto;
 }
@@ -74,7 +75,7 @@ main {
 }
 textarea {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 13px;
+    font-size: 15px;
     display: block;
     width: 90%;
     resize: none;
@@ -82,7 +83,8 @@ textarea {
     border-radius: 30px;
     padding: 0.6em;
     outline: none;
-    height: 15px;
+    height: 30px;
+    min-height: 30px;
     align-self: center;
     overflow: hidden;
 }
@@ -113,7 +115,6 @@ footer {
         grid-template-columns: 9fr 1fr;
         grid-template-rows: 9fr 1fr;
         grid-gap: 5px;
-        max-height: ;
     }
     .aside-left, .aside-right {
         display: none;
