--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -4,7 +4,7 @@
 
 <aside class="aside-left" ></aside>
 
-<main class="main">
+<main class="main" onload="loader()">
     {# zone of the bubbles chat #}
     <div class="response">
         <div class="zone first">
