--- a/app/templates/layouts/partials/footer.html
+++ b/app/templates/layouts/partials/footer.html
@@ -1,3 +1,6 @@
-<footer class="footer">
-    footer
+<footer class="header-footer">
+    <input type="submit" class="git" value="GIT"></input>
+    <input type="submit" class="linkedin" value="IN"></input>
+    <input type="submit" class="openclassrooms" value="OC"></input>
+    <input type="submit" class="facebook" value="FB"></input>
 </footer> 
