--- a/app/static/home.css
+++ b/app/static/home.css
@@ -12,7 +12,7 @@ body {
 }
 header {
     background-color: #DCF8C6;
-    border: solid 1px black;
+/*    border: solid 1px black;*/
     grid-column: 1 / -1;
 }
 main {
@@ -101,9 +101,37 @@ input {
     align-self: center;
 }
 footer {
-    background-color: #DCF8C6;
-    border: solid 1px black; 
+    display: flex;
+    /*background-color: rgba(220, 248, 198, 0.7);*/
+  /*  border: solid 1px black; */
     grid-column: 1/-1;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.git {
+    display: block;
+    height: 50px;
+    width: 50px;
+    background-color: #2b3137;
+    margin-top: 5px;
+}
+.linkedin {
+    height: 50px;
+    width: 50px;
+    background-color: red;
+    margin-top: 5px;
+}
+.openclassrooms {
+    height: 50px;
+    width: 50px;
+    background-color: #7451eb;
+    margin-top: 5px;
+}
+.facebook {
+    height: 50px;
+    width: 50px;
+    background-color: #4267b2;
+    margin-top: 5px;
 }
 
 /* animation*/
