adding social icon link

--- a/app/templates/layouts/partials/footer.html
+++ b/app/templates/layouts/partials/footer.html
@@ -1,6 +1,16 @@
-<footer class="header-footer">
-    <input type="submit" class="git" value="GIT"></input>
-    <input type="submit" class="linkedin" value="IN"></input>
-    <input type="submit" class="openclassrooms" value="OC"></input>
-    <input type="submit" class="facebook" value="FB"></input>
+<footer class="header-footer">  
+    <div class="wrapper">
+         <a href="https://fr.linkedin.com/in/dorian-massoulier-310630179" target="_blank">
+            <i class="fa fa-2x fa-linkedin-square"></i>
+        </a>
+        <a href="https://github.com/MassDo/Projet-7-GrandPy" target="_blank">
+            <i class="fa fa-2x fa-github-square"></i>
+        </a>
+        <a href="https://www.facebook.com/dorian.massoulier" target="_blank">
+            <i class="fa fa-2x fa-facebook-square"></i>
+        </a> 
+    </div> 
+    <div class="signature">
+        Dorian Massoulier
+    </div>      
 </footer> 
