--- a/app/static/home.css
+++ b/app/static/home.css
@@ -1,6 +1,9 @@
 /** {
     box-sizing: border-box;
 }*/
+/* New font*/
+@import url(//fonts.googleapis.com/css?family=Rock+Salt);
+
 body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif; 
     display: grid;
@@ -102,37 +105,69 @@ input {
 }
 footer {
     display: flex;
-    /*background-color: rgba(220, 248, 198, 0.7);*/
-  /*  border: solid 1px black; */
+    flex-direction: column;
     grid-column: 1/-1;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    align-items: center;
+    height: auto;
 }
-.git {
-    display: block;
-    height: 50px;
-    width: 50px;
-    background-color: #2b3137;
-    margin-top: 5px;
+
+.wrapper {
+  display: inline-flex;
+  margin-top: 20px;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
-.linkedin {
-    height: 50px;
-    width: 50px;
-    background-color: red;
-    margin-top: 5px;
+/* social media icon */
+i {
+  padding: 0px 10px;
+  overflow: hidden;
 }
-.openclassrooms {
-    height: 50px;
-    width: 50px;
-    background-color: #7451eb;
-    margin-top: 5px;
+
+.fa-linkedin-square {
+  color: #0077b5;
+  cursor: pointer;
+  text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 150ms;
 }
-.facebook {
-    height: 50px;
-    width: 50px;
-    background-color: #4267b2;
-    margin-top: 5px;
+
+.fa-linkedin-square:hover {
+  margin-top: -10px;
+  text-shadow: 0px 16px 10px rgba(0, 0, 0, 0.3);
+  transform: translate(0, -8);
 }
+
+.fa-github-square {
+  color: #444;
+  cursor: pointer;
+  text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 150ms;
+}
+
+.fa-github-square:hover {
+  margin-top: -10px;
+  text-shadow: 0px 16px 10px rgba(0, 0, 0, 0.3);
+  transform: translate(0, -8);
+}
+
+.fa-facebook-square {
+  color: #4867AA;
+  cursor: pointer;
+  text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+  transition: all ease-in-out 150ms;
+}
+
+.fa-facebook-square:hover {
+  margin-top: -10px;
+  text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
+  transform: translate(0, -5);
+}
+.signature {
+    font-family: Rock Salt, sans-serif;
+    font-size: 10px;
+}
+
 
 /* animation*/
 .loader {
@@ -207,3 +242,5 @@ footer {
         display: none;
     }
 }
+
+
