--- a/app/static/home.css
+++ b/app/static/home.css
@@ -8,15 +8,28 @@ body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif; 
     display: grid;
     grid-template-columns: 1.5fr 7fr 1.5fr;
-    grid-template-rows: 5vh 90vh 5vh;
+    grid-template-rows: 10vh 90vh 5vh;
     grid-gap: 5px;
     background-color: #ECE5DD;
     padding: 5px;
 }
 header {
-    background-color: #DCF8C6;
-/*    border: solid 1px black;*/
+/*    background-color: rgba(66,133,244,0.6);*/
+    display: inline-block;
+    font-family: Rock Salt, sans-serif;
+    color: #ECE5DD;
+    background-color: rgba(18,140,126, 0.5);
+    border-radius: 10px;
+    padding: 2px;
+    box-shadow: 0 5px 5px rgba(18,140,126, 0.2);
+    /*box-shadow: 10px -5px 5px 1px rgba(0,0,0,0.3);*/
     grid-column: 1 / -1;
+    text-align: center;
+    overflow: hidden;
+}
+.title {
+    font-size: 28px;
+    height: auto;   
 }
 main {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
@@ -34,8 +47,7 @@ main {
     grid-column: span 2;
     background-color: #ECE5DD;  
     max-height: 1fr;
-    overflow: auto;
-
+    overflow: auto
 }
 .zone {
     overflow: hidden;
@@ -67,6 +79,7 @@ main {
     float: right;
     margin-right: 5px;
     max-width: 74.5%;
+    overflow: hidden;
 }
 
 /*zone of the user input*/
@@ -168,14 +181,13 @@ i {
     font-size: 10px;
 }
 
-
 /* animation*/
 .loader {
     background-color: rgba(0, 0, 255, 0.05);
     position: absolute;
     top: -30px;
     left: -30px;
-    height: 110%;
+    height: 120%;
     width: 110%;
 }
 
