--- a/app/templates/layouts/partials/header.html
+++ b/app/templates/layouts/partials/header.html
@@ -1,5 +1,6 @@
 <header class="header-footer">
     <div class="title">
-        GrandPy Chatbot !
-    </div>    
+    GrandPy Chatbot !
+    </div>
+    <img src="{{url_for('static', filename='right.png')}}" alt="chatbot">
 </header>
