--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="zone first">
-            <div class="bubble bot">Donne moi un lieu à trouver et je te donnerai son adresse sur une carte, et en prime tu aurras droit à une anecdote !<br><br> Car oui à 124 ans j'en ai des choses à dire, et tu as bien une seconde à m'accorder ahah !<br><br> Cuf Cuf Cuf... Excuse moi c'est encore ma vieille toux ! </div>
+            <div class="bubble bot">Donne-moi un lieu à trouver et je te donnerai son adresse sur une carte, et en prime tu auras droit à une anecdote !<br><br> Car oui à 124 ans j'en ai des choses à dire, et tu as bien une seconde à m'accorder ahah !<br><br> Cuf Cuf Cuf... Excuse-moi c'est encore ma vieille toux ! </div>
         </div>
     </div>
     {# user input textarea and submit button #}
